fix blurry svg on safari

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -42,6 +42,7 @@ a:focus::before {
   background-position: center;
   background-repeat: no-repeat, repeat;
   background-size: 300px 300px;
+  transform: translate3d(0px, 0px, 0px);
 }
 
 .company_name {
